
cc_library(
	name = "flyweight",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_multi_index//:multi_index",
		"@com_github_bazelboost_parameter//:parameter",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_functional//:functional",
		"@com_github_bazelboost_interprocess//:interprocess",
		"@com_github_bazelboost_throw_exception//:throw_exception"
	],
)
