load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/flyweight/*.hpp",
]

cc_library(
    name = "flyweight_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "flyweight",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":flyweight_internal"],
)
